Lesson 10 fix all bugs and Lesson11 fixed the poker and Hypermarket tasks.